Significantly improved sentiment endpoint performance
